fix: text alignment on larger viewports

--- a/src/components/OryNetworkCta/ory-network-cta.css
+++ b/src/components/OryNetworkCta/ory-network-cta.css
@@ -92,6 +92,7 @@
 @media (min-width: 1070px) {
   .ory-network-cta__button {
     display: block;
+    text-align: center;
   }
 
   .ory-network-cta__inline-get-started {
